--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "supersimpledev": "^8.6.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
